<resources>
    <string name="app_name">TopCinema</string>
    <!--Main-->
    <string name="txtBtnInicioQuienesSomos">¿QUIÉNES SOMOS?</string>
    <string name="txtBtnInicioSistema">Ingresar al Sistema</string>
    <string name="txtBtnInicioRegistro">Registro</string>
    <!--Quienes Somos-->
    <string name="_2020_cochabamba_bolivia">2020 - Cochabamba, Bolivia</string>
    <string name="qui_nes_somos">¿QUIÉNES SOMOS?</string>
    <string name="en_topcinema_creamos_historias_m_gicas_emocionantes_divertidas_inquietantes_vivimos_el_cine_desde_la_idea_hasta_la_pantalla_por_eso_queremos_traerte_las_mejores_pel_culas_y_a_las_personas_que_las_hacen_posible_para_que_te_hagan_so_ar_y_vibrar_n_n_ven_y_vive_un_plan_filmax">En TopCinema creamos historias mágicas, emocionantes, divertidas, inquietantes.... Vivimos el cine desde la idea hasta la pantalla. Por eso queremos traerte las mejores películas y a las personas que las hacen posible para que te hagan soñar y vibrar. ¡Ven y vive un Plan TopCinema!</string>
    <string name="qu_prestaciones_encontrar_s_en_topcinema">¿Qué prestaciones encontrarás en TopCinema?</string>
    <string name="_16_salas_con_gran_capacidad_de_aforo_m_s_de_3000_butacas_nunca_te_quedar_s_sin_sitio">16 salas con gran capacidad de aforo (¡más de 3000 butacas!), nunca te quedarás sin sitio.</string>
    <string name="inmersi_n_total_pantallas_gigantes_y_c_modas_butacas_en_grada_para_que_disfrutes_del_nuevo_cine">Inmersión total: Pantallas gigantes y cómodas butacas en grada para que disfrutes del nuevo cine.</string>
    <string name="digital_experience_con_los_nuevos_proyectores_digitales_2d_y_3d">DIGITAL EXPERIENCE con los nuevos proyectores digitales 2D Y 3D.</string>
    <string name="_4dx_movimientos_y_vibraciones_esto_se_va_a_mover">4DX, movimientos y vibraciones: ¡Esto se va a mover!</string>
    <string name="tvScreenX">¡ScreenX, lo más nuevo!</string>
    <!--  Register -->
    <string name="btn1">Crear Usuario</string>
    <string name="btn2">Ingresar a BDD</string>
    <string name="title_activity_main_crear">MainCrear</string>
    <string name="titulo2">CREAR USUARIO</string>
    <string name="nombre">Nombre</string>
    <string name="apellido1">Apellido</string>
    <string name="apellido2">Segundo Apellido</string>
    <string name="edad">Edad</string>
    <string name="usuario">Nombre de Usuario</string>
    <string name="Password1">Contraseña</string>
    <string name="Password2">Verificar Contraseña</string>
    <string name="botonCrear">Registrarse</string>
    <string name="titulo3">INGRESAR AL SISTEMA</string>
    <string name="botonIngresar">Ingresar</string>
    <string name="string1">Ingrese su Nombre de Usuario</string>
    <string name="string2">Ingrese su Contraseña</string>
    <string name="correo">Correo</string>
    <!-- Login -->
    <string name="ingresarTitulo">INICIAR SESIÓN</string>
    <string name="ingresarIngresar">Ingresar</string>
    <string name="ingresarUsuario">Ingresa tu nombre de usuario</string>
    <string name="ingresarContrasenia">Ingresa tu contraseña</string>
    <!-- Register Peliculas -->
    <string name="tituloIngresarPelicula">AÑADIR PELÍCULA</string>
    <string name="nombrePelicula">Nombre</string>
    <string name="generoPelicula">Genero</string>
    <string name="companiaPelicula">Compañía</string>
    <string name="duracionPelicula">Duración</string>
    <string name="puntuacionPelicula">Puntuación</string>
    <string name="registroPeliculas">Películas</string>
    <!-- View Peliculas -->
    <string name="txtBtnRegistrarPelicula">Registrar Película</string>
    <!-- ListUser -->
    <string name="tvT">LISTA DE USUARIOS</string>
    <string name="btnRegistrarUsuario">REGISTRAR USUARIO</string>
    <string name="tvN">Nombre:</string>
    <string name="TVc">Correo:</string>
    <string name="tvU">Nombre de Usuario:</string>
    <!-- Panel -->
    <string name="btnIrRegistrar">Usuarios</string>
    <string name="btnIrPeliculas">Películas</string>
    <string name="btnCerrarSesion">Cerrar Sesión</string>
    <string name="etTopCinema">TOP CINEMA</string>
    <!-- Idiom -->
    <string name="txtCambiarIdioma">CAMBIAR IDIOMA</string>
    <string name="btnEspanol">Español</string>
    <string name="btnIngles">Inglés</string>
    <string name="btnVolverIdiom">Volver</string>
    <string name="tvP">LISTA DE PELÍCULAS</string>
    <string name="txtEtFiltrarUsuario">Filtrar Usuario por nombre de usuario</string>
    <string name="txtEtFiltrarPelicula">Filtrar Película por nombre</string>
    <string name="btnAgregarFoto">Añadir Carátula</string>
    <!-- Update Pelicula -->
    <string name="tituloUpdatePelicula">ACTUALIZAR PELÍCULA</string>
    <string name="btnActualizarFoto">ACTUALIZAR CARÁTULA</string>
    <string name="botonActualizar">ACTUALIZAR PELÍCULA</string>
</resources>
