<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:background="@color/darkGrey"
    tools:context=".PanelActivity">


    <TextView
        android:id="@+id/etTitulo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/estadoRojo"
        android:fontFamily="@font/chango"
        android:gravity="center"
        android:text="@string/etTopCinema"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnInicioSistema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/estadoRojo"
        android:fontFamily="@font/chango"
        android:onClick="cargarUserView"
        android:text="@string/btnIrRegistrar"
        android:textColor="@color/grey" />

    <Button
        android:id="@+id/btnIrPeliculas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/estadoRojo"
        android:fontFamily="@font/chango"
        android:onClick="cargarMovieView"
        android:text="@string/btnIrPeliculas"
        android:textColor="@color/grey" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/estadoRojo"
        android:fontFamily="@font/chango"
        android:onClick="cerrarSesion"
        android:text="@string/btnCerrarSesion"
        android:textColor="@color/grey"/>
</LinearLayout>