<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="#292B37"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/ingresarTitulo"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="italic"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/etIngresarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingresarUsuario"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/etIngresarContrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingresarContrasenia"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/btnIngresarIngresar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresarIngresar"
        android:textAlignment="center"
        android:textSize="24sp"
        android:background="#B11723"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/tvIngresarMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:gravity="center_horizontal" />
</LinearLayout>