<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".peliculas.ViewPeliculaActivity"
    android:padding="10dp"
    android:background="@color/darkGrey">

    <TextView
        android:id="@+id/tvListaPeliculasTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_light"
        android:gravity="center_horizontal"
        android:text="@string/tvP"
        android:textColor="@color/grey"
        android:textSize="30sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnRegistrarPelicula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/estadoRojo"
        android:fontFamily="@font/comfortaa_light"
        android:onClick="cargarRegisterPeliculas"
        android:text="@string/txtBtnRegistrarPelicula"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/grey" />

    <EditText
        android:id="@+id/etFiltrarPelicula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/txtEtFiltrarPelicula"
        android:inputType="textPersonName"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPeliculas"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>