<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".usuarios.ViewUserActivity">

    <TextView
        android:id="@+id/tvListaUsuarioTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_light"
        android:gravity="center_horizontal"
        android:text="@string/tvT"
        android:textColor="@color/grey"
        android:textSize="30sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#B11623"
        android:fontFamily="@font/comfortaa_light"
        android:onClick="cargarRegister"
        android:text="@string/btnRegistrarUsuario"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/grey"/>
    <EditText
        android:id="@+id/etFiltrarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/txtEtFiltrarUsuario"
        android:inputType="textPersonName"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ListUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>