<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/darkGrey"
    tools:context=".InicioActividad">

    <Button
        android:id="@+id/btnInicioQuienesSomos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/estadoRojo"
        android:fontFamily="@font/chango"
        android:text="@string/txtBtnInicioQuienesSomos"
        android:onClick="cargarQuienesSomos"
        android:textColor="@color/grey" />

    <Button
        android:id="@+id/btnInicioSistema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/estadoRojo"
        android:fontFamily="@font/chango"
        android:text="@string/txtBtnInicioSistema"
        android:onClick="cargarLogin"
        android:textColor="@color/grey" />

    <Button
        android:id="@+id/btnIrPeliculas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/estadoRojo"
        android:fontFamily="@font/chango"
        android:text="@string/txtBtnInicioRegistro"
        android:onClick="cargarRegister"
        android:textColor="@color/grey" />

    <Button
        android:id="@+id/btnIdioma"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:background="@color/estadoRojo"
        android:fontFamily="@font/chango"
        android:onClick="cargarIdioma" />

</LinearLayout>